@@ -1267,4 +1267,15 @@ stopifnot(!is.na(cut(x, "5 hours")))
 ## was NA in 2.11.x
 
 
+## summary() on data frames with invalid names -- in UTF-8 locale
+DF <- data.frame(a = 1:3, b = 4:6)
+nm <- names(DF) <- c("\xca", "\xcb")
+cn <- gsub(" ", "", colnames(summary(DF)), useBytes = TRUE)
+stopifnot(identical(cn, nm))
+m <- as.matrix(DF)
+DF <- data.frame(a = 1:3, m=I(m))
+cn <- gsub(" ", "", colnames(summary(DF)), useBytes = TRUE)
+stopifnot(identical(cn, c("a", paste("m.", nm, sep="", collapse=""))))
+##  Had NAs in < 2.12.0
+
 proc.time()
